2024-09-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.13

	* DESCRIPTION (Authors@R): Added

	* tests/saveAndLoad.R: Wrap invisisble() around npySave() calls as
	the function returns NULL under current Rcpp
	* tests/saveAndLoad.Rout.save: Idem

2024-07-15  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Switch some URLs from http to https

2024-06-20  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to r-ci-setup action

2024-05-21  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2023-11-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.12

	* src/cnpy.h (Rassert): Add format string to Rf_error call
	* src/cnpy.h (npy_save): Correct printf string for long size

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4

2023-02-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/Makevars: No longer set CXX_STD
	* src/Makevars.win: Idem

	* inst/CITATION: Update to new format preferred by r-devel

2022-11-10  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-03-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.11

	* vignettes/*.Rnw: Created to Rnw wrappers for pdf vignettes
	* vignettes/rmd/*: Moved Rmd and bib files from vignettes/
	* vignettes/pdf/*: Moved pdf vignettes/ created from Rmd

	* DESCRIPTION (Suggests): Removed knitr and rmarkdown
	* DESCRIPTION (VignetteBuilder): Removed
	* .Rbuildignore: Expanded

	* cleanup: Removed bashishm

2021-12-08  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-04-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add repo

2021-04-15  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update two URLs to https
